Ticket: #no-ticket SubTicket: # Component: Changes: 1. Fixed calendar on tablet issue.

--- a/TripfinderWeb/TripfinderWeb/Global/Css/page.less
+++ b/TripfinderWeb/TripfinderWeb/Global/Css/page.less
@@ -830,8 +830,10 @@ body {
 }
 
 .k-mobile .scheduler-wrap {
-	height: calc(~"100% - 146px") !important;
-	margin-right: 3px;
+	@media (max-width: 767px) {
+		height: calc(~"100% - 146px") !important;
+		margin-right: 3px;
+	}
 }
 
 .detail-view-panel {
